- -> Removed
! -> Note

29-Sep-2011 Christophe Demko
 $ [#26692] poor english grammar (Tim Plummer)
 # [#26724] PHP Error Reporting Level cannot be set to "None". (Nikolai Plath)
 $ [#26853] Some bluestork strings are no longer needed due to the commit of 25921 (Peter Chovancak)
 $ [#26857] Wrong English Grammar
 # [#25565] "Language string failed to load" showing up when sending an email

27-Sep-2011 Christophe Demko
 # [#26640] Code fixes for end of line inconsistencies (partial commit)

-------------------- 1.7.1 Stable Release [26-Sep-2011] ------------------

26-Sep-2011 Jean-Marie Simonet
 # [#26872] Problem installing with another language than default

25-Sep-2011 Mark Dexter
 # [#24654] No change in 'Menu Manager: Menus', if module was assigned to other menu in shadowbox showed after click to link in 'Modules Linked to the Menu' column in 'Menu Manager: Menus'
 # [#26390] Database password with '<' fails with Connector returned number: Unable to connect to the Database
 # [#26574] Weblinks - several issues
 # [#26695] Search word is required for com_search view
 # [#26867] Updating README
 # Small sample data fix

23-Sep-2011 Christophe Demko
 # [#26844] Improvements to batch processing

22-Sep-2011 Mark Dexter
 # [#26756] Prepare 1.7.1 upgrade process
 # [#26522] Client does not properly display in Extension Manager Update view
 # [#26824] Sync more changes form platform 11.2
 # [#26822] Fix some minor code style differences between trunk and 11.2
 # [#26715] Add stats toolbar icon

22-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: sk-SK. Correcting a typo in com_languages.ini
 + Added Macedonian flag to media/mod_languages/images/ . Thanks Ilija
 $ [#26852] *mod_multilangstatus missing case

21-Sep-2011 Mark Dexter
 # Fix sample data to correct #__redirect_links table definition

21-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: pt-PT, pt-BR
 # [#26552] Languagefilter plugin - wrong default for menu_association